--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,7 @@
 <section class="hero">
-  <div class="containter">
-    <h2 class="title-hero">Hero title</h2>
-    <img src="/img/vite-logo.png" width="200" height="200" alt="" class="" />
+  <div class="container">
+    <h2 class="title-hero">
+      Explore the High Seas with Our Luxury Yacht Rentals
+    </h2>
   </div>
 </section>
