--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,5 +13,9 @@
 /* Sections style */
 @import url('./header.css');
 @import url('./hero.css');
-@import url('./team.css');
+@import url('./about-us.css');
+@import url('./our-yachts.css');
+@import url('./advantages.css');
+@import url('./rent-a-yacht.css');
+@import url('./reviews.css');
 @import url('./footer.css');
