--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,3 +1,14 @@
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
+}
+
+body {
+  font-family: 'Inter', sans-serif;
+  color: #040306;
+  background-color: #fff;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
 }
