--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,5 @@
-Header
+<section class="header">
+  <div class="container">
+    <h2 class="title-header-test">Header will go here</h2>
+  </div>
+</section>
