--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,49 @@
 <section class="header">
-  <div class="container">
-    <h2 class="title-header-test">Header will go here</h2>
+  <div class="container header-container">
+    <a class="header-logo" href="./index.html">yachtjet</a>
+    <nav class="header-nav">
+      <ul class="header-list">
+        <li class="header-list-item">
+          <a class="header-list-link" href="#About">About</a>
+        </li>
+        <li class="header-list-item">
+          <a class="header-list-link" href="#Yachts">Yachts</a>
+        </li>
+        <li class="header-list-item">
+          <a class="header-list-link" href="#Reviews">Reviews</a>
+        </li>
+      </ul>
+    </nav>
+    <ul class="header-list-socials">
+      <li class="header-list-socials-item">
+        <a
+          class="header-list-socials-link"
+          href="https://www.instagram.com/goitclub/"
+          target="_blank"
+          ><svg width="24" height="24"><use href="#icon"></use></svg>
+        </a>
+      </li>
+      <li class="header-list-socials-item">
+        <a
+          class="header-list-socials-link"
+          href="https://www.youtube.com/c/GoIT"
+          target="_blank"
+          ><svg width="24" height="24"><use href="#icon"></use></svg>
+        </a>
+      </li>
+      <li class="header-list-socials-item">
+        <a
+          class="header-list-socials-link"
+          href="https://www.facebook.com/goITclub/"
+          target="_blank"
+          ><svg width="24" height="24"><use href="#icon"></use></svg>
+        </a>
+      </li>
+    </ul>
+    <a class="menu-link">
+      <svg width="28" height="28">
+        <use href="#icon" />
+      </svg>
+    </a>
   </div>
 </section>
