--- a/src/css/base.css
+++ b/src/css/base.css
@@ -7,7 +7,7 @@
 body {
   font-family: 'Inter', sans-serif;
   color: #040306;
-  background-color: #fff;
+  background-color: #0e1823;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
