--- a/src/css/header.css
+++ b/src/css/header.css
@@ -16,12 +16,18 @@
   color: #1b414b;
 }
 
+
 .header-list {
   display: none;
 }
 
 .header-list-socials {
   display: none;
+}
+
+.menu-icon {
+  stroke: #1b414b;
+  filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 @media screen and (min-width:768px) {
@@ -66,12 +72,22 @@
     gap: 8px;
   }
 
+  .header-socials-icon {
+    fill: #1b414b;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-socials-icon:hover,
+  .header-socials-icon:focus {
+    fill: #062730;
+  }
+
   .menu-link {
     display: none;
   }
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width:1280px) {
   .header-container {
     padding: 4px 30px;
   }
