--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,7 +20,9 @@
           class="header-list-socials-link"
           href="https://www.instagram.com/goitclub/"
           target="_blank"
-          ><svg width="24" height="24"><use href="#icon"></use></svg>
+          ><svg class="header-socials-icon" width="24" height="24">
+            <use href="./img/icons/icons.svg#icon-instagram"></use>
+          </svg>
         </a>
       </li>
       <li class="header-list-socials-item">
@@ -28,7 +30,9 @@
           class="header-list-socials-link"
           href="https://www.youtube.com/c/GoIT"
           target="_blank"
-          ><svg width="24" height="24"><use href="#icon"></use></svg>
+          ><svg class="header-socials-icon" width="24" height="24">
+            <use href="./img/icons/icons.svg#icon-youtube"></use>
+          </svg>
         </a>
       </li>
       <li class="header-list-socials-item">
@@ -36,13 +40,15 @@
           class="header-list-socials-link"
           href="https://www.facebook.com/goITclub/"
           target="_blank"
-          ><svg width="24" height="24"><use href="#icon"></use></svg>
+          ><svg class="header-socials-icon" width="24" height="24">
+            <use href="./img/icons/icons.svg#icon-facebook"></use>
+          </svg>
         </a>
       </li>
     </ul>
     <a class="menu-link">
-      <svg width="28" height="28">
-        <use href="#icon" />
+      <svg class="menu-icon" width="28" height="28">
+        <use href="./img/icons/icons.svg#icon-menu" />
       </svg>
     </a>
   </div>
