--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,60 @@
-<footer class="footer">Footer</footer>
+<footer class="footer">
+  <div class="container footer-container">
+    <a href="/src/index.html" class="logo-footer">yachtjet</a>
+
+    <ul class="links-footer-list">
+      <li class="links-fotr-item">
+        <button class="btn-footer" type="button">About</button>
+      </li>
+      <li class="links-fotr-item">
+        <button class="btn-footer" type="button">Yachts</button>
+      </li>
+      <li class="links-fotr-item">
+        <button class="btn-footer" type="button">Reviews</button>
+      </li>
+    </ul>
+    <ul class="social-link-footer-list">
+      <li class="social-link-item-footer">
+        <a
+          href="https://www.instagram.com/goitclub/"
+          class="link-icon-footer"
+          target="_blank"
+        >
+          <svg class="icon-footer" width="24" height="24">
+            <use href="./img/icons/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-link-item-footer">
+        <a
+          href="https://www.youtube.com/c/GoIT"
+          class="link-icon-footer"
+          target="_blank"
+        >
+          <svg class="icon-footer" width="24" height="24">
+            <use href="./img/icons/icons.svg#icon-youtube"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-link-item-footer">
+        <a
+          href="https://www.facebook.com/goITclub/"
+          class="link-icon-footer"
+          target="_blank"
+        >
+          <svg class="icon-footer" width="24" height="24">
+            <use href="./img/icons/icons.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+    <p class="footer-descr">
+      No matter which yacht you choose, our experienced crew will ensure that
+      your journey is smooth and enjoyable.
+    </p>
+    <div class="footer-text-div">
+      <p class="footer-text">2023. Yacht Adventures</p>
+      <a href="/" class="footer-text">Privacy Police</a>
+    </div>
+  </div>
+</footer>
