add markup and styles

--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,1 +1,90 @@
-About Us
+<section class="section about-us-section">
+  <div class="container about-us-container">
+    <div class="about-us-description-container">
+      <h2 class="about-us-title">
+        YachtJet fleet is here to take you on the ultimate adventure
+      </h2>
+      <div class="about-us-text-container">
+        <p class="about-us-description-f">
+          From spacious decks to state-of-the-art technology, our yachts are
+          designed to provide the perfect blend of luxury and functionality.
+        </p>
+        <p class="about-us-description-s">
+          Take a look at our selection below and choose the yacht that matches
+          your needs and preferences.No matter which yacht you choose, our
+          experienced crew will ensure that your journey is smooth and
+          enjoyable. Book now and get ready for an unforgettable adventure on
+          the high seas.
+        </p>
+      </div>
+    </div>
+
+    <picture class="about-us-image">
+      <source
+        srcset="
+          /img/about-us/aboutus-img-desktop1440.jpg    1x,
+          /img/about-us/aboutus-img-desktop1440@2x.jpg 2x
+        "
+        media="(min-width: 1440px)"
+      />
+      <source
+        srcset="
+          /img/about-us/aboutus-img-desktop1280.jpg    1x,
+          /img/about-us/aboutus-img-desktop1280@2x.jpg 2x
+        "
+        media="(min-width: 1280px)"
+      />
+      <source
+        srcset="
+          /img/about-us/aboutus-img-tablet.jpg    1x,
+          /img/about-us/aboutus-img-tablet@2x.jpg 2x
+        "
+        media="(min-width: 768px)"
+      />
+      <source
+        srcset="
+          src/img/about-us/aboutus-img-mobile.jpg    1x,
+          src/img/about-us/aboutus-img-mobile@2x.jpg 2x
+        "
+        media="(max-width: 767px)"
+      />
+      <img src="src/img/about-us/aboutus-img-mobile.jpg" alt="jachtjet" />
+    </picture>
+
+    <!-- <picture class="about-us-image">
+      <source
+        srcset="
+          /img/webp/about-us/aboutus-img-desktop1440.webp    1x,
+          /img/webp/about-us/aboutus-img-desktop1440@2x.webp 2x
+        "
+        type="image/webp"
+        media="(min-width: 1440px)"
+      />
+      <source
+        srcset="
+          /img/webp/about-us/aboutus-img-desktop1280.webp    1x,
+          /img/webp/about-us/aboutus-img-desktop1280@2x.webp 2x
+        "
+        type="image/webp"
+        media="(min-width: 1280px)"
+      />
+      <source
+        srcset="
+          /img/webp/about-us/aboutus-img-tablet.webp    1x,
+          /img/webp/about-us/aboutus-img-tablet@2x.webp 2x
+        "
+        type="image/webp"
+        media="(min-width: 768px)"
+      />
+      <source
+        srcset="
+          /img/webp/about-us/aboutus-img-mobile.webp    1x,
+          /img/webp/about-us/aboutus-img-mobile@2x.webp 2x
+        "
+        type="image/webp"
+        media="(max-width: 767px)"
+      />
+      <img src="src/img/aboutus-img-mobile.jpg" alt="jachtjet" />
+    </picture> -->
+  </div>
+</section>
