--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -2,13 +2,20 @@
 
 .container {}
 
-.advantages-container {}
+.advantages-container {
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
 
 .advantages-title {}
 
 .advanteges-info {
     border-radius: 24px;
-    width: 335px;
+    width: 100%;
     background: #1b414b;
     padding: 80px 20px;
 }
@@ -19,14 +26,134 @@
     gap: 40px;
 }
 
-.advantages-list-item {}
+.advantages-list-item {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+}
+
+.advantages-list-item::before{
+    content: "";
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 1;
+    letter-spacing: -0.05em;
+    color: #fbfbfb;
+}
+
+.advantages-list-item:nth-child(1)::before{
+    content: "01";
+}
+
+.advantages-list-item:nth-child(2)::before{
+    content: "02";
+}
+
+.advantages-list-item:nth-child(3)::before{
+    content: "03";
+}
+
+.advantages-list-item:nth-child(4)::before{
+    content: "04";
+}
 
 .advantages-list-item-text {
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: -0.02em;
     color: #fbfbfb;
+    opacity: 0.8;
 }
 
-.advantages-img {}
+.advantages-list-item-text::before{
+    content: "";
+    border-radius: 18px;
+    width: 100%;
+    height: 2px;
+    background-color: rgba(251, 251, 251, 0.1);
+    display: block;
+    margin-bottom: 18px;
+}
+
+.advantages-img {
+    border-radius: 24px;
+}
+
+@media screen and (min-width: 375px){
+
+    .advantages-container {
+        padding: 0;
+    }
+
+    .advanteges-info {
+        width: 335px;
+    }
+}
+
+@media screen and (min-width: 768px){
+
+    .advantages-container {
+        gap: 32px;
+    }
+
+    .advanteges-info {
+        width: 704px;
+        padding: 90px 32px;
+    }
+
+    .advantages-list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 44px;
+        column-gap: 32px;
+    }
+
+    .advantages-list-item {
+        width: 304px;
+    }
+
+    .advantages-list-item::before {
+        font-size: 32px;
+    }
+
+    .advantages-list-item-text {
+        font-size: 13px;
+        line-height: 1.15;
+    }
+
+    .advantages-img {
+        width: 704px;
+        height: 424px;
+    }
+    
+}
+
+@media screen and (min-width: 1280px){
+
+    .advantages-container {
+        flex-direction: row;
+    }
+
+    .advanteges-info {
+        width: 716px;
+        padding: 90px 50px;
+    }
+
+    .advantages-list-item {
+        width: 292px;
+    }
+
+    .advantages-img {
+        width: 432px;
+        height: 424px;
+    }
+}
+
+@media screen and (min-width: 1440px){
+    
+    .advantages-img {
+        width: 540px;
+        height: 424px;
+    }
+}
