--- a/src/partials/our-yachts.html
+++ b/src/partials/our-yachts.html
@@ -1,10 +1,10 @@
 <section class="our-yachts">
   <div class="container">
-    <h2 class="our-yachts-titel">
+    <h2 class="our-yachts-title">
       Choose your dream yacht and sail away into the sunset
     </h2>
-    <ul class="our-yachts-item">
-      <li class="our-yachts-item-list">
+    <ul class="our-yachts-list">
+      <li class="our-yachts-list-item">
         <div class="yacht-card">
           <picture>
             <source
@@ -46,40 +46,48 @@
           </picture>
         </div>
 
-        <div class="our-yachts-item-list-subtitel line">
-          <h2 class="our-yachts-item-list-subtitel-titel">Arrow</h2>
-          <h2 class="our-yachts-item-list-subtitel-text">LUXURY YAHTS</h2>
+        <div class="our-yachts-list-item-subtitle line">
+          <h2 class="our-yachts-list-item-subtitle-title">Arrow</h2>
+          <h2 class="our-yachts-list-item-subtitle-text">LUXURY YAHTS</h2>
         </div>
-        <div class="our-yachts-item-list-text">
-          <ul class="our-yachts-item-list-item">
-            <li class="our-yachts-item-list-item-list our-yachts-grey">
+        <div class="our-yachts-list-item-text">
+          <ul class="our-yachts-list-item-sublist">
+            <li class="our-yachts-list-item-sublist-subitem our-yachts-grey">
               <p>LENGTH</p>
             </li>
-            <li class="our-yachts-item-list-item-list our-yachts-grey">
+            <li class="our-yachts-list-item-sublist-subitem our-yachts-grey">
               <p>BUILDER</p>
             </li>
-            <li class="our-yachts-item-list-item-list our-yachts-grey">
+            <li class="our-yachts-list-item-sublist-subitem our-yachts-grey">
               <p>BUILT</p>
             </li>
-            <li class="our-yachts-item-list-item-list our-yachts-grey">
+            <li class="our-yachts-list-item-sublist-subitem our-yachts-grey">
               <p>GUESTS</p>
             </li>
-            <li class="our-yachts-item-list-item-list our-yachts-grey">
+            <li class="our-yachts-list-item-sublist-subitem our-yachts-grey">
               <p>PRICE</p>
             </li>
           </ul>
-          <ul class="our-yachts-item-list-item">
-            <li class="our-yachts-item-list-item-list"><p>48m(155ft)</p></li>
-            <li class="our-yachts-item-list-item-list"><p>Admiral</p></li>
-            <li class="our-yachts-item-list-item-list"><p>2021</p></li>
-            <li class="our-yachts-item-list-item-list">
+          <ul class="our-yachts-list-item-sublist">
+            <li class="our-yachts-list-item-sublist-subitem capitalize">
+              <p>48m(155ft)</p>
+            </li>
+            <li class="our-yachts-list-item-sublist-subitem capitalize">
+              <p>Admiral</p>
+            </li>
+            <li class="our-yachts-list-item-sublist-subitem capitalize">
+              <p>2021</p>
+            </li>
+            <li class="our-yachts-list-item-sublist-subitem capitalize">
               <p>11 in 5 cabins</p>
             </li>
-            <li class="our-yachts-item-list-item-list"><p>€33,500,000</p></li>
+            <li class="our-yachts-list-item-sublist-subitem capitalize">
+              <p>€33,500,000</p>
+            </li>
           </ul>
         </div>
       </li>
-      <li class="our-yachts-item-list">
+      <li class="our-yachts-list-item">
         <div class="yacht-card">
           <picture>
             <source
@@ -113,42 +121,50 @@
           </picture>
         </div>
 
-        <div class="our-yachts-item-list-subtitel line">
-          <h2 class="our-yachts-item-list-subtitel-titel">
+        <div class="our-yachts-list-item-subtitle line">
+          <h2 class="our-yachts-list-item-subtitle-title">
             BENETTI OASIS 40M BO122
           </h2>
-          <h2 class="our-yachts-item-list-subtitel-text">LUXURY YAHTS</h2>
+          <h2 class="our-yachts-list-item-subtitle-text">LUXURY YAHTS</h2>
         </div>
-        <div class="our-yachts-item-list-text">
-          <ul class="our-yachts-item-list-item">
-            <li class="our-yachts-item-list-item-list our-yachts-grey">
+        <div class="our-yachts-list-item-text">
+          <ul class="our-yachts-list-item-sublist">
+            <li class="our-yachts-list-item-sublist-subitem our-yachts-grey">
               <p>LENGTH</p>
             </li>
-            <li class="our-yachts-item-list-item-list our-yachts-grey">
+            <li class="our-yachts-list-item-sublist-subitem our-yachts-grey">
               <p>SHIPYARD</p>
             </li>
-            <li class="our-yachts-item-list-item-list our-yachts-grey">
+            <li class="our-yachts-list-item-sublist-subitem our-yachts-grey">
               <p>BUILT</p>
             </li>
-            <li class="our-yachts-item-list-item-list our-yachts-grey">
+            <li class="our-yachts-list-item-sublist-subitem our-yachts-grey">
               <p>GUESTS</p>
             </li>
-            <li class="our-yachts-item-list-item-list our-yachts-grey">
+            <li class="our-yachts-list-item-sublist-subitem our-yachts-grey">
               <p>PRICE</p>
             </li>
           </ul>
-          <ul class="our-yachts-item-list-item">
-            <li class="our-yachts-item-list-item-list"><p>41m (133ft)</p></li>
-            <li class="our-yachts-item-list-item-list"><p>Benetti</p></li>
-            <li class="our-yachts-item-list-item-list"><p>2025</p></li>
-            <li class="our-yachts-item-list-item-list">
+          <ul class="our-yachts-list-item-sublist">
+            <li class="our-yachts-list-item-sublist-subitem capitalize">
+              <p>41m (133ft)</p>
+            </li>
+            <li class="our-yachts-list-item-sublist-subitem capitalize">
+              <p>Benetti</p>
+            </li>
+            <li class="our-yachts-list-item-sublist-subitem capitalize">
+              <p>2025</p>
+            </li>
+            <li class="our-yachts-list-item-sublist-subitem capitalize">
               <p>10 in 5 cabins</p>
             </li>
-            <li class="our-yachts-item-list-item-list"><p>€23,210,000</p></li>
+            <li class="our-yachts-list-item-sublist-subitem capitalize">
+              <p>€23,210,000</p>
+            </li>
           </ul>
         </div>
       </li>
-      <li class="our-yachts-item-list">
+      <li class="our-yachts-list-item">
         <div class="yacht-card">
           <picture>
             <source
@@ -175,36 +191,44 @@
             />
           </picture>
         </div>
-        <div class="our-yachts-item-list-subtitel line">
-          <h2 class="our-yachts-item-list-subtitel-titel">BELLE ANNA</h2>
-          <h2 class="our-yachts-item-list-subtitel-text">LUXURY YAHTS</h2>
+        <div class="our-yachts-list-item-subtitle line">
+          <h2 class="our-yachts-list-item-subtitle-title">BELLE ANNA</h2>
+          <h2 class="our-yachts-list-item-subtitle-text">LUXURY YAHTS</h2>
         </div>
-        <div class="our-yachts-item-list-text">
-          <ul class="our-yachts-item-list-item">
-            <li class="our-yachts-item-list-item-list our-yachts-grey">
+        <div class="our-yachts-list-item-text">
+          <ul class="our-yachts-list-item-sublist">
+            <li class="our-yachts-list-item-sublist-subitem our-yachts-grey">
               <p>LENGTH</p>
             </li>
-            <li class="our-yachts-item-list-item-list our-yachts-grey">
+            <li class="our-yachts-list-item-sublist-subitem our-yachts-grey">
               <p>SHIPYARD</p>
             </li>
-            <li class="our-yachts-item-list-item-list our-yachts-grey">
+            <li class="our-yachts-list-item-sublist-subitem our-yachts-grey">
               <p>BUILT</p>
             </li>
-            <li class="our-yachts-item-list-item-list our-yachts-grey">
+            <li class="our-yachts-list-item-sublist-subitem our-yachts-grey">
               <p>GUESTS</p>
             </li>
-            <li class="our-yachts-item-list-item-list our-yachts-grey">
+            <li class="our-yachts-list-item-sublist-subitem our-yachts-grey">
               <p>PRICE</p>
             </li>
           </ul>
-          <ul class="our-yachts-item-list-item">
-            <li class="our-yachts-item-list-item-list"><p>50m(155ft)</p></li>
-            <li class="our-yachts-item-list-item-list"><p>ISA</p></li>
-            <li class="our-yachts-item-list-item-list"><p>2012</p></li>
-            <li class="our-yachts-item-list-item-list">
+          <ul class="our-yachts-list-item-sublist">
+            <li class="our-yachts-list-item-sublist-subitem capitalize">
+              <p>50m(155ft)</p>
+            </li>
+            <li class="our-yachts-list-item-sublist-subitem capitalize">
+              <p>ISA</p>
+            </li>
+            <li class="our-yachts-list-item-sublist-subitem capitalize">
+              <p>2012</p>
+            </li>
+            <li class="our-yachts-list-item-sublist-subitem capitalize">
               <p>12 in 6 cabins</p>
             </li>
-            <li class="our-yachts-item-list-item-list"><p>€21,000,000</p></li>
+            <li class="our-yachts-list-item-sublist-subitem capitalize">
+              <p>€21,000,000</p>
+            </li>
           </ul>
         </div>
       </li>
