--- a/src/css/our-yachts.css
+++ b/src/css/our-yachts.css
@@ -2,29 +2,11 @@
   background-color: #0e1823;
   padding-left: 20px;
   padding-right: 20px;
-}
-.container {
-  max-width: 375px;
   padding-bottom: 80px;
+  padding-top: 80px;
 }
 
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 768px;
-    padding-bottom: 150px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-@media screen and (min-width: 1440px) {
-  .container {
-    max-width: 1440px;
-  }
-}
-.our-yachts-titel {
+.our-yachts-title {
   max-width: 300px;
   text-align: center;
   font-weight: 500;
@@ -34,12 +16,12 @@
   color: #fbfbfb;
   margin: 0 auto;
 }
-.our-yachts-item {
+.our-yachts-list {
   display: block;
   margin-top: 40px;
   margin-bottom: 40px;
 }
-.our-yachts-item-list {
+.our-yachts-list-item {
   padding-top: 16px;
   padding-left: 16px;
   padding-right: 16px;
@@ -47,21 +29,21 @@
   border-radius: 24px;
   padding-bottom: 24px;
 }
-.yacht-card {
-}
-.our-yachts-item-list img {
+
+.our-yachts-list-item img {
   width: 100%;
   height: auto;
   border-radius: 24px;
 }
 
-.our-yachts-item-list-subtitel {
+.our-yachts-list-item-subtitle {
   display: flex;
   padding-left: 16px;
   padding-right: 16px;
   padding-top: 32px;
   padding-bottom: 16px;
   justify-content: space-between;
+  align-items: center;
 }
 .line {
   position: relative;
@@ -78,7 +60,7 @@
   background: rgba(4, 3, 6, 0.1);
 }
 
-.our-yachts-item-list-subtitel-titel {
+.our-yachts-list-item-subtitle-title {
   font-weight: 500;
   font-size: 14px;
 
@@ -86,8 +68,13 @@
   letter-spacing: -0.04em;
   text-transform: uppercase;
   color: #1b414b;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 147px;
 }
-.our-yachts-item-list-subtitel-text {
+.our-yachts-list-item-subtitle-text {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
@@ -96,28 +83,31 @@
   opacity: 0.4;
 }
 
-.our-yachts-item-list-text {
+.our-yachts-list-item-text {
   display: flex;
   justify-content: space-between;
   padding-left: 16px;
   padding-right: 16px;
   padding-top: 16px;
 }
-.our-yachts-item-list:nth-child(2),
-.our-yachts-item-list:nth-child(3) {
+.our-yachts-list-item:nth-child(2),
+.our-yachts-list-item:nth-child(3) {
   display: none;
 }
 
-.our-yachts-item-list-item {
-}
-.our-yachts-item-list-item-list {
+.our-yachts-list-item-sublist-subitem {
   margin-bottom: 6px;
   text-transform: uppercase;
+  font-size: 14px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
 }
 .our-yachts-grey {
   opacity: 0.4;
 }
-
+.capitalize {
+  text-transform: capitalize;
+}
 .our-yachts-btn {
   display: block;
   margin: 0 auto;
@@ -134,6 +124,7 @@
   letter-spacing: -0.02em;
   text-align: center;
   padding: 14px 32px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .our-yachts-btn:focus,
 .our-yachts-btn:hover {
@@ -142,30 +133,46 @@
 }
 
 @media screen and (min-width: 768px) {
-  .our-yachts-item-list:nth-child(2) {
+  .our-yachts {
+    padding-bottom: 150px;
+    padding-top: 150px;
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+  .our-yachts-list-item:nth-child(2) {
     display: block;
   }
+  .our-yachts-list-item-subtitle-title {
+    font-size: 16px;
+    line-height: 1.2;
+    letter-spacing: -0.04em;
 
-  .our-yachts-titel {
-    max-width: 600px;
+    max-width: 150px;
   }
-  .our-yachts-titel {
+  .our-yachts-list-item-subtitle-text {
+    font-size: 13px;
+    line-height: 1.18;
+    letter-spacing: 0.03em;
+  }
+
+  .our-yachts-title {
+    max-width: 600px;
     font-size: 48px;
   }
 
-  .our-yachts-item {
+  .our-yachts-list {
     display: flex;
     gap: 33px;
     justify-content: space-between;
   }
-  .our-yachts-item-list {
+  .our-yachts-list-item {
     width: calc((100% - 32px) / 2);
 
     justify-content: center;
     align-items: center;
   }
 
-  .our-yachts-item {
+  .our-yachts-list {
     margin-top: 75px;
     margin-bottom: 50px;
   }
@@ -182,17 +189,25 @@
   }
 }
 @media screen and (min-width: 1280px) {
-  .our-yachts-item-list:nth-child(3) {
+  .our-yachts {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  .our-yachts-list-item:nth-child(3) {
     display: block;
   }
-  .our-yachts-titel {
+  .our-yachts-list-item-subtitle-title {
+    max-width: 177px;
+  }
+
+  .our-yachts-title {
     max-width: 620px;
   }
 
-  .our-yachts-item {
+  .our-yachts-list {
     gap: 32px;
   }
-  .our-yachts-item-list {
+  .our-yachts-list-item {
     width: calc((100% - 64px) / 3);
 
     justify-content: center;
