--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="advantages">
+<section class="advantages" id="advantages">
     <div class="container advantages-container">
         <h2 class="advantages-title visually-hidden">Advantages</h2>
         <div class="advanteges-info">
@@ -18,11 +18,11 @@
             </ol>
         </div>
         <picture>
-            <source media="(min-width: 1440px)" srcset="../img/advantages/advantages-desk.jpg 1x, ../img/advantages/advantages-desk@2x.jpg 2x">
-            <source media="(min-width: 1280px)" srcset="../img/advantages/advantages-desk1280.jpg 1x, ../img/advantages/advantages-desk1280@2x.jpg 2x">
-            <source media="(min-width: 768px)" srcset="../img/advantages/advantages-tab.jpg 1x, ../img/advantages/advantages-tab@2x.jpg 2x">
-            <source media="(min-width: 320px)" srcset="../img/advantages/advantages-mob.jpg 1x, ../img/advantages/advantages-mob@2x.jpg 2x">
-            <img class="advantages-img" src="../img/advantages/advantages-mob.jpg" alt="cabin" width="335" height="424">
+            <source media="(min-width: 1440px)" srcset="./img/advantages/advantages-desk.jpg 1x, ./img/advantages/advantages-desk@2x.jpg 2x">
+            <source media="(min-width: 1280px)" srcset="./img/advantages/advantages-desk1280.jpg 1x, ./img/advantages/advantages-desk1280@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="./img/advantages/advantages-tab.jpg 1x, ./img/advantages/advantages-tab@2x.jpg 2x">
+            <source media="(min-width: 320px)" srcset="./img/advantages/advantages-mob.jpg 1x, ./img/advantages/advantages-mob@2x.jpg 2x">
+            <img class="advantages-img" src="./img/advantages/advantages-mob.jpg" alt="cabin" width="335" height="424">
         </picture>
         
     </div>
