--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -22,33 +22,33 @@
     <picture class="about-us-image">
       <source
         srcset="
-          src/img/about-us/aboutus-img-desktop1440.jpg    1x,
-          src/img/about-us/aboutus-img-desktop1440@2x.jpg 2x
+          ./img/about-us/aboutus-img-desktop1440.jpg    1x,
+          ./img/about-us/aboutus-img-desktop1440@2x.jpg 2x
         "
         media="(min-width: 1440px)"
       />
       <source
         srcset="
-          src/img/about-us/aboutus-img-desktop1280.jpg    1x,
-          src/img/about-us/aboutus-img-desktop1280@2x.jpg 2x
+          ./img/about-us/aboutus-img-desktop1280.jpg    1x,
+          ./img/about-us/aboutus-img-desktop1280@2x.jpg 2x
         "
         media="(min-width: 1280px)"
       />
       <source
         srcset="
-          src/img/about-us/aboutus-img-tablet.jpg    1x,
-          src/img/about-us/aboutus-img-tablet@2x.jpg 2x
+          ./img/about-us/aboutus-img-tablet.jpg    1x,
+          ./img/about-us/aboutus-img-tablet@2x.jpg 2x
         "
         media="(min-width: 768px)"
       />
       <source
         srcset="
-          src/img/about-us/aboutus-img-mobile.jpg    1x,
-          src/img/about-us/aboutus-img-mobile@2x.jpg 2x
+          ./img/about-us/aboutus-img-mobile.jpg    1x,
+          ./img/about-us/aboutus-img-mobile@2x.jpg 2x
         "
         media="(max-width: 767px)"
       />
-      <img src="src/img/about-us/aboutus-img-mobile.jpg" alt="jachtjet" />
+      <img src="./img/about-us/aboutus-img-mobile.jpg" alt="jachtjet" />
     </picture>
   </div>
 </section>
