--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,6 +7,7 @@
   justify-content: space-between;
   padding: 7px 20px;
   height: 42px;
+  width: 335px;
 }
 
 .header-logo {
@@ -15,7 +16,6 @@
   letter-spacing: -0.03em;
   color: #1b414b;
 }
-
 
 .header-list {
   display: none;
@@ -35,6 +35,7 @@
   .header-container {
     padding: 4px 28px;
     height: 48px;
+    width: 704px;
   }
 
   .header-logo {
@@ -48,7 +49,6 @@
 
   .header-list-link {
     display: flex;
-    font-family: "Inter", sans-serif;
     font-weight: 400;
     font-size: 9px;
     line-height: 1.3;
@@ -74,6 +74,11 @@
     gap: 8px;
   }
 
+  .header-list-socials-link {
+    display: flex;
+    align-items: center;
+  }
+
   .header-socials-icon {
     fill: #1b414b;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -92,5 +97,12 @@
 @media screen and (min-width:1280px) {
   .header-container {
     padding: 4px 30px;
+    width: 1080px;
+  }
+}
+
+@media screen and (min-width:1440px) {
+  .header-container {
+    width: 1240px;
   }
 }
