add new icon to sprite

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,5 +3,11 @@
     <h2 class="title-hero">
       Explore the High Seas with Our Luxury Yacht Rentals
     </h2>
+    <svg class="features-icon" width="24" height="24">
+      <use href="/img/icons/icons.svg#icon-instagram"></use>
+    </svg>
+    <svg class="features-icon" width="24" height="24">
+      <use href="/img/icons/icons.svg#icon-cursor"></use>
+    </svg>
   </div>
 </section>
