fixed reviews container

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,5 +1,5 @@
 <section class="reviews">
-  <div class="container">
+  <div class="container container_reviews">
     <h2 class="reviews-title">
       YachtJet take pride in providing the best possible service and experience
       to our customers
