--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -2,6 +2,24 @@
     margin-bottom: 80px;
 }
 
+@media screen and (min-width: 768px) {
+    .container_reviews{
+        max-width: 704px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .container_reviews {
+        max-width: 1180px;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .container_reviews {
+        max-width: 1240px;
+    }
+}
+
 .reviews-title {
     font-weight: 500;
     font-size: 28px;
