--- a/src/partials/our-yachts.html
+++ b/src/partials/our-yachts.html
@@ -1,4 +1,4 @@
-<section class="our-yachts">
+<section class="our-yachts" id="Yachts">
   <div class="container">
     <h2 class="our-yachts-title">
       Choose your dream yacht and sail away into the sunset
@@ -177,8 +177,8 @@
 
             <source
               srcset="
-                /img/our-yachts/our-yachts-yaht-three-desk.jpg     1x,
-                /img/our-yachts/our-yachts-yaht-three-deskt@2x.jpg 2x
+                /img/our-yachts/our-yachts-yaht-three-desk.jpg    1x,
+                /img/our-yachts/our-yachts-yaht-three-desk@2x.jpg 2x
               "
               media="(min-width: 1280px)"
             />
