--- a/src/css/base.css
+++ b/src/css/base.css
@@ -12,3 +12,12 @@ body {
   font-size: 16px;
   line-height: 1.5;
 }
+
+* {
+  cursor: url('/img/cursors/cursor.svg'), auto;
+}
+
+button:hover,
+a:hover {
+  cursor: url('/img/cursors/cursor-pointer.svg'), auto;
+}
