--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -14,8 +14,8 @@
         <div class="reviews-card">
           <div class="reviews-item-image">
             <img
-              srcset="../img/reviews/john.jpg 1x, ../img/reviews/john@2x.jpg 2x"
-              src="../img/reviews/john.jpg  "
+              srcset="/img/reviews/john.jpg 1x, /img/reviews/john@2x.jpg 2x"
+              src="/img/reviews/john.jpg  "
               alt="john"
               width="56"
               height="56"
@@ -34,10 +34,10 @@
           <div class="reviews-item-image">
             <img
               srcset="
-                ../img/reviews/victoria.jpg    1x,
-                ../img/reviews/victoria@2x.jpg 2x
+                /img/reviews/victoria.jpg    1x,
+                /img/reviews/victoria@2x.jpg 2x
               "
-              src="../img/reviews/victoria.jpg"
+              src="/img/reviews/victoria.jpg"
               alt="victoria"
               width="56"
               height="56"
@@ -55,8 +55,8 @@
         <div class="reviews-card">
           <div class="reviews-item-image">
             <img
-              srcset="../img/reviews/ihor.jpg 1x, ../img/reviews/ihor@2x.jpg 2x"
-              src="../img/reviews/ihor.jpg"
+              srcset="/img/reviews/ihor.jpg 1x, /img/reviews/ihor@2x.jpg 2x"
+              src="/img/reviews/ihor.jpg"
               alt="ihor"
               width="56"
               height="56"
