footer-change-fix

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -54,7 +54,7 @@
     </p>
     <div class="footer-text-div">
       <p class="footer-text">2023. Yacht Adventures</p>
-      <a href="/" class="footer-text">Privacy Police</a>
+      <a href="/" class="footer-text">Privacy Policy</a>
     </div>
   </div>
 </footer>
