--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -4,7 +4,7 @@
 
 .footer-container {
   border-radius: 24px 24px 0 0;
-  width: 355px;
+  min-width: 355px;
   height: 412px;
   background-color: #1b414b;
 }
@@ -31,7 +31,7 @@
 }
 
 .btn-footer {
-  font-family: "Inter", sans-serif;
+  font-family: inherit;
   font-weight: 400;
   font-size: 9px;
   line-height: 1.3;
@@ -68,10 +68,8 @@
 }
 
 .footer-descr {
-  font-family: "Inter", sans-serif;
   max-width: 279px;
   max-height: 72px;
-  font-weight: 400;
   font-size: 18px;
   line-height: 1;
   letter-spacing: -0.02em;
@@ -174,6 +172,10 @@
       left: 466px;
       max-width: 298px;
     }
+
+    .footer-descr {
+      max-width: 693px;
+    }
 }
 
 @media screen and (min-width: 1440px) {
@@ -195,5 +197,9 @@
       margin-top: 100px;
       left: 546px;
       max-width: 298px;
+    }
+
+    .footer-descr {
+      max-width: 699px;
     }
 }
