--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,13 @@
 <section class="hero">
   <div class="container">
-    <h2 class="title-hero">
+    <h1 class="title-hero">
       Explore the High Seas with Our Luxury Yacht Rentals
-    </h2>
+    </h1>
+    <p class="hero-text">
+      Experience the freedom and luxury of yachting on the open seas. Choose
+      from our top-of-the-line yachts and embark on an unforgettable journey
+      surrounded by breathtaking views and state-of-the-art amenities.
+    </p>
+    <a class="hero-link" id="title-hero" href="#">Yacht rental</a>
   </div>
 </section>
