--- a/src/css/our-yachts.css
+++ b/src/css/our-yachts.css
@@ -1,13 +1,10 @@
 .our-yachts {
-  background-color: #0e1823;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 80px;
-  padding-top: 80px;
+  padding: 80px 20px;
+  margin: 0 auto;
 }
 
 .our-yachts-title {
-  max-width: 300px;
+  max-width: 319px;
   text-align: center;
   font-weight: 500;
   font-size: 28px;
@@ -22,28 +19,22 @@
   margin-bottom: 40px;
 }
 .our-yachts-list-item {
-  padding-top: 16px;
-  padding-left: 16px;
-  padding-right: 16px;
   background: #fbfbfb;
   border-radius: 24px;
-  padding-bottom: 24px;
+  padding: 16px 16px 32px 16px;
 }
 
-.our-yachts-list-item img {
-  width: 100%;
-  height: auto;
+.yacht-card {
+  display: block;
   border-radius: 24px;
+  overflow: hidden;
 }
 
 .our-yachts-list-item-subtitle {
   display: flex;
-  padding-left: 16px;
-  padding-right: 16px;
-  padding-top: 32px;
-  padding-bottom: 16px;
   justify-content: space-between;
   align-items: center;
+  padding: 32px 16px 16px 16px;
 }
 .line {
   position: relative;
@@ -86,17 +77,18 @@
 .our-yachts-list-item-text {
   display: flex;
   justify-content: space-between;
-  padding-left: 16px;
-  padding-right: 16px;
-  padding-top: 16px;
+  padding: 16px 16px 0 16px;
 }
 .our-yachts-list-item:nth-child(2),
 .our-yachts-list-item:nth-child(3) {
   display: none;
 }
-
+.our-yachts-list-item-sublist {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
 .our-yachts-list-item-sublist-subitem {
-  margin-bottom: 6px;
   text-transform: uppercase;
   font-size: 14px;
   line-height: 1.18;
@@ -123,7 +115,8 @@
   line-height: 1.29;
   letter-spacing: -0.02em;
   text-align: center;
-  padding: 14px 32px;
+  padding: 14px;
+
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .our-yachts-btn:focus,
@@ -134,10 +127,8 @@
 
 @media screen and (min-width: 768px) {
   .our-yachts {
-    padding-bottom: 150px;
-    padding-top: 150px;
-    padding-left: 32px;
-    padding-right: 32px;
+    width: 768px;
+    padding: 150px 32px;
   }
   .our-yachts-list-item:nth-child(2) {
     display: block;
@@ -156,7 +147,7 @@
   }
 
   .our-yachts-title {
-    max-width: 600px;
+    max-width: 645px;
     font-size: 48px;
   }
 
@@ -185,13 +176,13 @@
 
     line-height: 1.1;
     letter-spacing: -0.02em;
-    padding: 16px 40px;
+    padding: 16px;
   }
 }
 @media screen and (min-width: 1280px) {
   .our-yachts {
-    padding-left: 50px;
-    padding-right: 50px;
+    padding: 150px 50px;
+    width: 1280px;
   }
   .our-yachts-list-item:nth-child(3) {
     display: block;
@@ -201,7 +192,7 @@
   }
 
   .our-yachts-title {
-    max-width: 620px;
+    max-width: 714px;
   }
 
   .our-yachts-list {
@@ -212,5 +203,12 @@
 
     justify-content: center;
     align-items: center;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .our-yachts {
+    padding: 150px 100px;
+    width: 1440px;
   }
 }
