--- a/src/partials/our-yachts.html
+++ b/src/partials/our-yachts.html
@@ -6,7 +6,7 @@
     <ul class="our-yachts-list">
       <li class="our-yachts-list-item">
         <div class="yacht-card">
-          <picture>
+          <picture class="yacht-card">
             <source
               srcset="
                 /img/our-yachts/our-yachts-yaht-desktop.jpg    1x,
@@ -40,7 +40,7 @@
             <img
               src="/img/our-yachts/our-yachts-yaht-desk.jpg"
               alt="Luxury Yacht"
-              width="345"
+              width="360"
               height="268"
             />
           </picture>
@@ -70,7 +70,7 @@
           </ul>
           <ul class="our-yachts-list-item-sublist">
             <li class="our-yachts-list-item-sublist-subitem capitalize">
-              <p>48m(155ft)</p>
+              <p>48m (155ft)</p>
             </li>
             <li class="our-yachts-list-item-sublist-subitem capitalize">
               <p>Admiral</p>
@@ -88,8 +88,8 @@
         </div>
       </li>
       <li class="our-yachts-list-item">
-        <div class="yacht-card">
-          <picture>
+        <div>
+          <picture class="yacht-card">
             <source
               srcset="
                 /img/our-yachts/our-yachts-yaht-two-desktop.jpg    1x,
@@ -115,7 +115,7 @@
             <img
               src="/img/our-yachts/our-yachts-yaht-two-desk.jpg"
               alt="Yacht"
-              width="345"
+              width="360"
               height="268"
             />
           </picture>
@@ -165,8 +165,8 @@
         </div>
       </li>
       <li class="our-yachts-list-item">
-        <div class="yacht-card">
-          <picture>
+        <div>
+          <picture class="yacht-card">
             <source
               srcset="
                 /img/our-yachts/our-yachts-yaht-three-desktop.jpg    1x,
@@ -186,7 +186,7 @@
             <img
               src="/img/our-yachts/our-yachts-yaht-three-desk.jpg"
               alt="Yacht"
-              width="345"
+              width="360"
               height="268"
             />
           </picture>
@@ -215,7 +215,7 @@
           </ul>
           <ul class="our-yachts-list-item-sublist">
             <li class="our-yachts-list-item-sublist-subitem capitalize">
-              <p>50m(155ft)</p>
+              <p>50m (155ft)</p>
             </li>
             <li class="our-yachts-list-item-sublist-subitem capitalize">
               <p>ISA</p>
