--- a/src/css/our-yachts.css
+++ b/src/css/our-yachts.css
@@ -1,9 +1,7 @@
 .our-yachts {
+  padding: 80px 20px;
+  margin: 0 auto;
   background-color: #0e1823;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 80px;
-  padding-top: 80px;
 }
 
 .our-yachts-title {
@@ -22,28 +20,23 @@
   margin-bottom: 40px;
 }
 .our-yachts-list-item {
-  padding-top: 16px;
-  padding-left: 16px;
-  padding-right: 16px;
   background: #fbfbfb;
   border-radius: 24px;
-  padding-bottom: 24px;
+
+  padding: 16px 16px 32px 16px;
 }
 
-.our-yachts-list-item img {
-  width: 100%;
-  height: auto;
+.yacht-card {
+  display: block;
   border-radius: 24px;
+  overflow: hidden;
 }
 
 .our-yachts-list-item-subtitle {
   display: flex;
-  padding-left: 16px;
-  padding-right: 16px;
-  padding-top: 32px;
-  padding-bottom: 16px;
   justify-content: space-between;
   align-items: center;
+  padding: 32px 16px 16px 16px;
 }
 .line {
   position: relative;
@@ -94,9 +87,13 @@
 .our-yachts-list-item:nth-child(3) {
   display: none;
 }
+.our-yachts-list-item-sublist {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
 
 .our-yachts-list-item-sublist-subitem {
-  margin-bottom: 6px;
   text-transform: uppercase;
   font-size: 14px;
   line-height: 1.18;
@@ -134,10 +131,8 @@
 
 @media screen and (min-width: 768px) {
   .our-yachts {
-    padding-bottom: 150px;
-    padding-top: 150px;
-    padding-left: 32px;
-    padding-right: 32px;
+    padding: 150px 32px;
+    width: 768px;
   }
   .our-yachts-list-item:nth-child(2) {
     display: block;
@@ -192,6 +187,7 @@
   .our-yachts {
     padding-left: 50px;
     padding-right: 50px;
+    width: 1280px;
   }
   .our-yachts-list-item:nth-child(3) {
     display: block;
@@ -212,5 +208,12 @@
 
     justify-content: center;
     align-items: center;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .our-yachts {
+    padding-left: 100px;
+    padding-right: 100px;
+    width: 1440px;
   }
 }
