--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -1,5 +1,5 @@
 .advantages {
-    margin-bottom: 150px;
+    padding-bottom: 150px;
 }
 
 .container {}
@@ -15,7 +15,7 @@
 
 .advantages-title {}
 
-.advanteges-info {
+.advantages-info {
     border-radius: 24px;
     width: 100%;
     background: #1b414b;
@@ -88,7 +88,7 @@
         padding: 0;
     }
 
-    .advanteges-info {
+    .advantages-info {
         width: 335px;
     }
 }
@@ -100,7 +100,7 @@
         padding: 0 32px;
     }
 
-    .advanteges-info {
+    .advantages-info{
         width: 704px;
         padding: 90px 32px;
     }
@@ -123,6 +123,7 @@
     .advantages-list-item-text {
         font-size: 13px;
         line-height: 1.15;
+        width: 292px;
     }
 
     .advantages-img {
@@ -139,7 +140,7 @@
         padding: 0 50px;
     }
 
-    .advanteges-info {
+    .advantages-info {
         width: 716px;
         padding: 90px 50px;
     }
@@ -156,7 +157,7 @@
 
 @media screen and (min-width: 1440px){
     
-    .advanteges-info {
+    .advantages-info{
         width: 768px;
         padding: 90px 50px;
     }
