--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,7 +1,7 @@
 <section class="advantages" id="advantages">
     <div class="container advantages-container">
         <h2 class="advantages-title visually-hidden">Advantages</h2>
-        <div class="advanteges-info">
+        <div class="advantages-info">
             <ol class="advantages-list">
                 <li class="advantages-list-item">
                     <p class="advantages-list-item-text">Swimming and water sports: try your hand at water skiing</p>
