--- a/src/css/header.css
+++ b/src/css/header.css
@@ -105,3 +105,81 @@
     width: 1240px;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+/*mobile menu*/
+.mobile-menu {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: #1b414b;
+  z-index: 1000;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu.is-open{
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.mobile-menu-clouse{
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  border-radius: 100%;
+  background-color: transparent;
+  border: 1px solid #e7e9fc;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-container {
+  display: flex;
+  background: #fbfbfb;
+  border: 1px solid #fbfbfb;
+  border-radius: 8px;
+  align-items: center;
+  justify-content: space-between;
+  padding: 7px 20px;
+  height: 42px;
+}
+
+.menu-logo {
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: -0.03em;
+  color: #1b414b;
+}
+.menu-list {
+  display: none;
+}
+
+.menu-list-socials {
+  display: none;
+}
+
+.menu-icon {
+  display: flex;
+  stroke: #1b414b;
+  filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
+}
