--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -52,4 +52,72 @@
       </svg>
     </a>
   </div>
+
+
+
+
+
+<!-- mobilemenu -->
+
+<div class="mobile-menu is-open" data-modal>
+  <div class="container mobile-menu-container">
+  <button class="mobile-menu-clouse" data-modal-close>
+      <svg height="28" width="28" class="menu-close">
+      <use href="./img/icons/icons.svg#icon-close"></use>
+      </svg>
+  </button>
+  <a class="menu-logo" href="./index.html">yachtjet</a>
+  <nav class="menu-nav">
+    <ul class="menu-list">
+      <li class="menu-list-item">
+        <a class="menu-list-link" href="#About">About</a>
+      </li>
+      <li class="menu-list-item">
+        <a class="menu-list-link" href="#Yachts">Yachts</a>
+      </li>
+      <li class="menu-list-item">
+        <a class="menu-list-link" href="#Reviews">Reviews</a>
+      </li>
+    </ul>
+  </nav>
+  <ul class="menu-list-socials">
+    <li class="menu-list-socials-item">
+      <a
+        class="menu-list-socials-link"
+        href="https://www.instagram.com/goitclub/"
+        target="_blank"
+        ><svg class="menu-socials-icon" width="24" height="24">
+          <use href="./img/icons/icons.svg#icon-instagram"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="menu-list-socials-item">
+      <a
+        class="menu-list-socials-link"
+        href="https://www.youtube.com/c/GoIT"
+        target="_blank"
+        ><svg class="menu-socials-icon" width="24" height="24">
+          <use href="./img/icons/icons.svg#icon-youtube"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="menu-list-socials-item">
+      <a
+        class="menu-list-socials-link"
+        href="https://www.facebook.com/goITclub/"
+        target="_blank"
+        ><svg class="menu-socials-icon" width="24" height="24">
+          <use href="./img/icons/icons.svg#icon-facebook"></use>
+        </svg>
+      </a>
+    </li>
+  </ul>
+  <a class="menu-link">
+    <svg class="menu-icon" width="28" height="28">
+      <use href="./img/icons/icons.svg#icon-close" />
+    </svg>
+  </a>
+</div>
 </section>
+
+
